cluster/logger-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: logger
spec:
  hosts:
    - logger
  # This is an internal service, so is not announced to the gateway.
  # With no "gateways" field, the default applies: Make this service
  # known internally to every other service.
  http:
    - match:
        - uri:
            prefix: /api/v1/logger
      rewrite:
        uri: /api/v1/logger
      route:
        - destination:
            host: logger
            port:
              number: 30003
